Add Scalar Support and add logback.xml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,5 @@
-spring:
-  application:
-    name: graphql-java-tools-app
+#spring:
+#  application:
+#    name: graphql-java-tools-app
 server:
   port: 9001
-graphql:
-  servlet:
-    exception-handlers-enabled: true
